--- a/DiseñoAngular/front-angular/src/app/form/form.component.html
+++ b/DiseñoAngular/front-angular/src/app/form/form.component.html
@@ -1,1 +1,65 @@
-<p>form works!</p>
+<div class="boton-container" *ngIf="!showForm">
+    <button mat-raised-button color="primary" class="ButtonCenter" (click)="toggleForm('create')">Crear</button>
+  </div>
+  
+  <!-- Tabla, visible solo cuando showForm sea false -->
+  <div *ngIf="!showForm">
+    <div class="table-container">
+      <table class="table table-striped">
+        <thead>
+          <tr>
+            <th>Name</th>
+            <th>Description</th>
+            <th>Active</th>
+            <th>Actions</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let form of forms">
+            <td>{{ form.Name }}</td>
+            <td>{{ form.Description }}</td>
+            <td>{{ form.IsDeleted ? 'Yes' : 'No' }}</td>
+            <td>
+              <button mat-raised-button color="primary" (click)="editForm(form)">Editar</button>
+              <button mat-raised-button color="warn" (click)="deleteForm(form.Id)">Eliminar</button>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+  
+  <!-- Formulario combinado para crear y actualizar -->
+  <div *ngIf="showForm" class="form-container">
+    <form (ngSubmit)="submitForm()" #formElement="ngForm">
+      <div class="form-group">
+        <label for="name">Name</label>
+        <input type="text" id="name" [(ngModel)]="currentForm.Name" name="name" required #name="ngModel" />
+        <div *ngIf="name.invalid && name.touched" class="error-message">
+          El campo de nombre es obligatorio.
+        </div>
+      </div>
+  
+      <div class="form-group">
+        <label for="description">Description</label>
+        <input type="text" id="description" [(ngModel)]="currentForm.Description" name="description" required #description="ngModel" />
+        <div *ngIf="description.invalid && description.touched" class="error-message">
+          El campo de descripción es obligatorio.
+        </div>
+      </div>
+  
+      <div class="form-group">
+        <label for="active">Active</label>
+        <input type="checkbox" id="active" [(ngModel)]="currentForm.IsDeleted" name="active" />
+      </div>
+  
+      <div class="buttons-container">
+        <button mat-raised-button color="primary" type="submit" [disabled]="formElement.invalid">
+          {{ isEditing ? 'Actualizar' : 'Crear' }}
+        </button>
+        <button mat-raised-button type="button" (click)="cancelForm()">
+          Cancelar
+        </button>
+      </div>
+    </form>
+  </div>
