--- a/DiseñoAngular/front-angular/src/app/principal/principal.component.html
+++ b/DiseñoAngular/front-angular/src/app/principal/principal.component.html
@@ -1,27 +1,13 @@
-<!-- navbar.component.html -->
-<nav class="navbar">
-    <div class="navbar-container">
-      <div class="navbar-logo">
-        <a href="#">Mi App</a>
-      </div>
-      
-      <div class="menu-icon" (click)="toggleMenu()">
-        <i class="fas fa-bars"></i>
-      </div>
-      
-      <ul class="nav-menu" [ngClass]="{'active': isMenuOpen}">
-        <li class="nav-item">
-          <a [routerLink]="['/inicio']" class="nav-link" routerLinkActive="active">Inicio</a>
-        </li>
-        <li class="nav-item">
-          <a [routerLink]="['/servicios']" class="nav-link" routerLinkActive="active">Servicios</a>
-        </li>
-        <li class="nav-item">
-          <a [routerLink]="['/productos']" class="nav-link" routerLinkActive="active">Productos</a>
-        </li>
-        <li class="nav-item">
-          <a [routerLink]="['/contacto']" class="nav-link" routerLinkActive="active">Contacto</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
+<div class="sidebar">
+  <ul>
+    <li><a routerLink="/principal/form">Form</a></li>
+    <li><a routerLink="">Module</a></li>
+    <li><a routerLink="">Permission</a></li>
+    <li><a routerLink="">Person</a></li>
+    <li><a routerLink="">Rol</a></li>
+    <li><a routerLink="">User</a></li>
+    <li><a routerLink="">RolFormPermission</a></li>
+    <li><a routerLink="">FormModule</a></li>
+  </ul>
+</div>
+<router-outlet></router-outlet>
