--- a/DiseñoAngular/front-angular/src/app/form/form.component.html
+++ b/DiseñoAngular/front-angular/src/app/form/form.component.html
@@ -19,8 +19,8 @@
       <td>{{ form.description }}</td>
       <td>{{ form.url }}</td> <td>{{ form.IsDeleted ? 'Sí' : 'No' }}</td> <td>
         <button (click)="editForm(form)">Editar</button>
-        <button (click)="deleteForm(form.Id)">Eliminar</button>
-        <button (click)="deleteFormLogic(form.Id)">Eliminar Lógico</button>
+        <button (click)="deleteForm(form.id)">Eliminar</button>
+        <button (click)="deleteFormLogic(form.id)">Eliminar Lógico</button>
       </td>
     </tr>
   </tbody>
