--- a/DiseñoAngular/front-angular/src/app/login/login.component.html
+++ b/DiseñoAngular/front-angular/src/app/login/login.component.html
@@ -29,11 +29,17 @@
           </mat-error>
         </mat-form-field>
         
-        <button mat-raised-button color="primary" type="submit" [disabled]="loginForm.invalid" class="full-width">
+        <button mat-raised-button type="submit" [disabled]="loginForm.invalid" class="full-width green-button">
           Ingresar
         </button>
       </form>
-      <div id="googleSignInDiv" style="margin-top: 16px; display: flex; justify-content: center;"></div>
+      
+      <!-- Divider for login options -->
+      <div class="login-divider">
+        <span>O continúa con</span>
+      </div>
+      
+      <div id="googleSignInDiv"></div>
     </mat-card-content>
   </mat-card>
 </div>
